--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ai": "^3.0.23",
     "next": "14.2.1",
+    "openai": "^4.38.0",
     "react": "^18",
     "react-dom": "^18"
   },
