--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "ai": "^3.0.23",
+    "graphql-request": "^6.1.0",
     "next": "14.2.1",
     "openai": "^4.38.0",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18"
   },
